<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_bank"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bank" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_guilds"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/guilds" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
