<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.darrellii.gw2.gw2apiexperment.app.about.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mission_statement"
        android:textColor="@android:color/black"
        android:text="@string/mission_statement"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mission_statement"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_margin="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="18sp"
            android:text="@string/contact_the_developer"/>

        <TextView
            android:layout_margin="4dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter_darrellii"/>
        <TextView
            android:layout_margin="4dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdm_darrellii"/>
        <TextView
            android:layout_margin="4dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gw2_darrellii"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_margin="4dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_lbl"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/arenanet_copyright"/>
    </LinearLayout>






</RelativeLayout>
