<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.login.LogInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcome_text"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="42sp"
        android:text="@string/welcome_statement" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:id="@+id/darrellii_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/by_darrellii"/>

    <EditText
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gw2_api_key_hint"
        android:textColorHint="@color/colorPrimary"
        android:textSize="30sp"
        android:lines="1"
        android:id="@+id/api_key"
        android:layout_below="@id/darrellii_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/api_key"
        android:id="@+id/get_api_key"
        android:text="@string/get_api_key"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/get_api_key"
        android:textColor="@color/colorPrimary"
        android:id="@+id/login"
        android:text="@string/log_in"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/text_red_light"
        android:id="@+id/required_perms"
        />

</RelativeLayout>
